<resources>
    <string name="app_name">Database</string>

    <!--Buttons-->
    <string name="button_search">Поиск</string>
    <string name="button_filter">Фильтры</string>
    <string name="button_update">Обновить</string>
    <string name="button_open">Открыть</string>
    <string name="button_create">Создать</string>
    <string name="button_settings">Настройки</string>
    <string name="button_add">+</string>
    <string name="button_save">Сохранить</string>
    <string name="button_drop_filter">Сбросить</string>
    <string name="button_close">Закрыть</string>
    <string name="button_add_user">Добавить</string>
    <string name="button_download">Скачать</string>
    <string name="button_back">Назад</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_add_document">Добавить файл</string>
    <string name="button_add_photo">Добавить фото</string>
    <string name="button_delete">Удалить</string>
    <string name="button_convert">txt</string>
    <string name="symbol_close">×</string>

    <!--Hint-->
    <string name="hint_line_search">Введите данные...</string>
    <string name="hint_name_db">Введите название БД</string>
    <string name="hint_name_table">Введите название таблицы</string>

    <!--Title-->
    <string name="title_data_user">Информация о пользователе</string>
    <string name="title_create_user">Создание пользователя</string>
    <string name="title_create_db">Создание БД</string>
    <string name="title_choice_action">Выберите действие</string>
    <string name="title_filter">Фильтры</string>
    <string name="title_delete_data">Удаление записи</string>
    <string name="you_sure">Вы уверены?</string>

    <!--TextView-->
    <string name="title_table">Таблицы</string>
    <string name="title_age_min">Возраст от</string>
    <string name="title_age_max">до</string>
    <string name="title_city">Город</string>
    <string name="title_checkbox_age">Использовать фильтр по возрасту</string>
    <string name="title_checkbox_city">Использовать фильтр по городу</string>

    <!--Message for Toats-->
    <string name="empty_line">Вы ничего не ввели</string>
    <string name="empty_first_name">Вы не ввели имя</string>
    <string name="first_open_db">Для начала откройте или создайте БД</string>
    <string name="choice_file">Выберите файл БД</string>
    <string name="success_copy">БД успешно скопирована</string>
    <string name="success_create">БД успешно создана</string>
    <string name="error_copy">Ошибка при копировании БД</string>
    <string name="success_delete_data">Запись удалена</string>
    <string name="success_update_data">Запись обновлена</string>
    <string name="success_create_data">Запись создана</string>
    <string name="success_move_data">Запись перемещена</string>
    <string name="success_create_table">Таблица успешно создана</string>
    <string name="success_delete_table">Таблица успешно удалена</string>
    <string name="success_filter">Фильтры успешно применены</string>
    <string name="error_filter_age">Минимальный возраст больше максимального</string>
    <string name="success_convert_user">Конвертация завершена</string>
    <string name="success_copy_user">Запись успешно скопирована</string>
    <string name="success_move_user">Запись успешно перемешена</string>

    <!--Fields-->
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="age">Возраст</string>
    <string name="birth">Дата рождения</string>
    <string name="country">Страна, город</string>
    <string name="address">Адрес</string>
    <string name="index">Индекс</string>
    <string name="number_phone">Номер телефона</string>
    <string name="phone">Телефон</string>
    <string name="passport">Паспорт</string>
    <string name="snils">Снилс</string>
    <string name="car">Машина</string>
    <string name="education">Образование</string>
    <string name="place_work">Место работы</string>
    <string name="email">Почта</string>
    <string name="vk">ВКонтакте</string>
    <string name="instagram">Инстаграм</string>
    <string name="telegram">Телеграм</string>
    <string name="other_social">Другие соц. сети</string>
    <string name="relative">Родственники</string>
    <string name="hobby">Хобби</string>
    <string name="other">Остальное</string>

    <string-array name="animals">
        <item>Кот</item>
        <item>Кошка</item>
        <item>Котёнок</item>
        <item>Животное</item>
    </string-array>

</resources>