<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/main_color"
	tools:context=".CreateUser">

	<Button
		android:id="@+id/create_user"
		android:layout_width="120dp"
		android:layout_height="45dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/custom_button"
		android:fontFamily="@font/montserrat_bold"
		android:onClick="create_user"
		android:text="@string/button_add_user"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<EditText
		android:id="@+id/firts_name_create"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="15dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/first_name"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title_create" />

	<EditText
		android:id="@+id/last_name_create"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/last_name"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/firts_name_create" />

	<EditText
		android:id="@+id/patronymic_create"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/patronymic"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/last_name_create" />

	<EditText
		android:id="@+id/age_create"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/age"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/patronymic_create" />

	<EditText
		android:id="@+id/birth_create"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/birth"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/age_create" />

	<TextView
		android:id="@+id/title_create"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="15dp"
		android:fontFamily="@font/montserrat_bold"
		android:text="@string/title_create_user"
		android:textColor="@color/white"
		android:textSize="25dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/back_from_create"
		android:layout_width="100dp"
		android:layout_height="45dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/custom_button"
		android:fontFamily="@font/montserrat_bold"
		android:text="@string/button_cancel"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/create_user" />

</androidx.constraintlayout.widget.ConstraintLayout>