<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/main_color"
	tools:context=".DataUser">

	<Button
		android:id="@+id/save_user"
		android:layout_width="130dp"
		android:layout_height="45dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/custom_button"
		android:fontFamily="@font/montserrat_bold"
		android:onClick="save_user"
		android:text="@string/button_save_user"
		android:textColor="@color/white"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		tools:ignore="TouchTargetSizeCheck" />

	<EditText
		android:id="@+id/firts_name"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="20dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/first_name"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/title_data_user"
		tools:ignore="TouchTargetSizeCheck" />

	<EditText
		android:id="@+id/last_name"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/last_name"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/firts_name"
		tools:ignore="TouchTargetSizeCheck" />

	<EditText
		android:id="@+id/patronymic"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/patronymic"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/last_name"
		tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

	<EditText
		android:id="@+id/age"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/age"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/patronymic"
		tools:ignore="TouchTargetSizeCheck" />

	<EditText
		android:id="@+id/birth"
		android:layout_width="200dp"
		android:layout_height="45dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/custom_line"
		android:ems="10"
		android:fontFamily="@font/montserrat"
		android:hint="@string/birth"
		android:inputType="textPersonName"
		android:paddingLeft="10dp"
		android:textColor="@color/white"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/age"
		tools:ignore="TouchTargetSizeCheck" />

	<TextView
		android:id="@+id/title_data_user"
		android:layout_width="0dp"
		android:layout_height="40dp"
		android:layout_marginStart="15dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="15dp"
		android:fontFamily="@font/montserrat_bold"
		android:text="@string/title_data_user"
		android:textColor="@color/white"
		android:textSize="25dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/back_from_data_user"
		android:layout_width="90dp"
		android:layout_height="45dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/custom_button"
		android:text="@string/button_back"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/delete_user"
		tools:ignore="TouchTargetSizeCheck" />

	<Button
		android:id="@+id/delete_user"
		android:layout_width="110dp"
		android:layout_height="45dp"
		android:layout_marginEnd="10dp"
		android:layout_marginBottom="10dp"
		android:background="@drawable/custom_button"
		android:onClick="delete"
		android:text="@string/button_delete"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/save_user" />

</androidx.constraintlayout.widget.ConstraintLayout>