<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="210dp"
    android:layout_height="200dp"
    android:background="@color/main_color"
    tools:context=".ActionPhoto">

    <Button
        android:id="@+id/open_photo"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_open"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/download_photo"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_download"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/open_photo" />

    <Button
        android:id="@+id/delete_photo"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/button_delete"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/download_photo" />

    <TextView
        android:id="@+id/close_action_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/symbol_close"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>